crates/naos-core/tests/fixtures/conformance/rejected/conditional-jsx.wc.tsx
import { state } from "@naos-ui/core"

export function ConditionalJsx() {
  const ready = state(false)

  return (
    <section>
      {ready() ? <span>Ready</span> : <span>Waiting</span>}
    </section>
  )
}
